import org.gradle.jvm.toolchain.JavaLanguageVersion

plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

bootRun {
	jvmArgs = [
		'--add-opens=java.base/java.net=ALL-UNNAMED',
		'--add-opens=java.base/java.lang=ALL-UNNAMED',
		'--add-opens=java.base/java.util=ALL-UNNAMED',
		'--add-opens=java.base/sun.net.www.protocol.http=ALL-UNNAMED',
		'--add-opens=java.base/sun.net.www.protocol.https=ALL-UNNAMED',
		'-Djava.awt.headless=true',
		'-Dfile.encoding=UTF-8',
		'-XX:+UnlockExperimentalVMOptions',
		'-XX:+UseG1GC',
		'-Xmx4g'
	]
}

group = 'com.liferay'
version = '0.0.1-SNAPSHOT'

dependencies {
	implementation "org.springframework.boot:spring-boot-starter-cache"
	implementation "org.springframework.boot:spring-boot-starter-websocket"
	implementation group: "com.liferay", name: "com.liferay.client.extension.util.spring.boot3", version: "latest.release"
	implementation group: "com.liferay", name: "com.liferay.headless.admin.user.client", version: "latest.release"
	implementation group: "com.liferay", name: "com.liferay.headless.delivery.client", version: "latest.release"
	implementation group: "com.liferay", name: "com.liferay.object.admin.rest.client", version: "latest.release"
	implementation group: "org.json", name: "json", version: "20231013"
	implementation group: "org.springframework.boot", name: "spring-boot-starter-oauth2-resource-server", version: "2.7.18"
	implementation group: "org.springframework.boot", name: "spring-boot-starter-web", version: "2.7.18"
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}